2005-07-27  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Note that the XFAIL tests all need to be fixed before
	1.0.
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/text-antialias-gray-ref.png:
	* test/text-antialias-gray.c: (draw), (main):
	* test/text-antialias-none-ref.png:
	* test/text-antialias-none.c: (draw), (main):
	* test/text-antialias-subpixel.c: (draw), (main): Add three new
	tests for testing the various antialiasing options for text
	rendering.

2005-07-27  Carl Worth  <cworth@cworth.org>

	* src/cairo-png.c: (cairo_image_surface_create_from_png_stream):
	Fix typo that caused cairo_image_surface_create_from_png_stream to
	segfault. Closes bug #3863 (thanks to Steve Chaplin).
	
	* test/.cvsignore:
	* test/Makefile.am:
	* test/create-from-png-stream-ref.png:
	* test/create-from-png-stream.c:
	* test/create-from-png.c: Add a test to actually call
	cairo_image_surface_create_from_png_stream.

2005-07-27  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_xlib_glyphset_cache_create_entry): Deal
	with glyphs with entry->im->image NULL. (This can happen if fonts
	have size-zero bitmaps for some characters, for example)
	(http://bugzilla.gnome.org/show_bug.cgi?id=311709, Sangu Kim)

2005-07-27  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-ft-font.c (_get_bitmap_surface): FreeType bitmaps may
	only be padded out to 8-bit boundaries, not 32-bit boundaries.
	(_render_glyph_bitmap): Fix sign error in using glyphslot->bitmap_left.

2005-07-27 David Reveman <davidr@novell.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_screen_from_visual): Trivial
	fix for typo that caused infinite loop when using non-default visuals.

2005-07-25  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h:
	* src/cairo-font.c:
	* src/cairo-ft-font.c:
	* src/cairo-glitz-surface.c:
	* src/cairo-pdf-surface.c: Replace all occurences of refcount with
	ref_count.

	* doc/public/language-bindings.xml: Replace refcounted with
	reference-counted.
